- Fixed major bug in viewing cart and modifying cart. User should not get negative zeros now  - Clicking remove item does not remove other items arbitrarily now.

--- a/app/src/main/res/layout/activity_select_size_brewed_bubble_milkshake_coffee.xml
+++ b/app/src/main/res/layout/activity_select_size_brewed_bubble_milkshake_coffee.xml
@@ -21,9 +21,10 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="11dp"
-            android:text="SELECT ADDITIONAL FLAVORS:"
+            android:text="SELECT ADD-ONS:"
+            android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="24sp" />
+            android:textSize="30sp" />
 
         <Spinner
             android:id="@+id/flavorOption1_brewed_bubble_milkshake_coffee"
