- Cart clears on logout with confirmation message showing ("Are you sure you want to logout...etc"

--- a/app/src/main/res/menu/activity_menu_coffee_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_coffee_drawer.xml
@@ -29,4 +29,13 @@
             android:icon="@drawable/ic_message_black_24dp"
             android:title="Contact Us" />
     </group>
+
+    <item android:title="Other">
+        <menu>
+            <item
+                android:id="@+id/logout_option"
+                android:icon="@drawable/ic_directions_car_black_24dp"
+                android:title="Logout" />
+        </menu>
+    </item>
 </menu>
