--- a/app/src/main/res/layout/content_rewards.xml
+++ b/app/src/main/res/layout/content_rewards.xml
@@ -177,7 +177,16 @@
             android:layout_toEndOf="@+id/starProg9"
             android:src="@drawable/ic_star_black_24dp"
             android:tint="@color/colorBasicFull"/>
-
-
+        <Button
+            android:id="@+id/redeemReward"
+            android:layout_width="110dp"
+            android:layout_height="40dp"
+            android:layout_below="@+id/starProg8"
+            android:layout_centerHorizontal="true"
+            android:background="@color/black"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="30dp"
+            android:text="Redeem Reward"
+            android:textColor="@color/white" />
     </android.widget.RelativeLayout>
 </ScrollView>
