--- a/app/src/main/res/layout/activity_payment_details.xml
+++ b/app/src/main/res/layout/activity_payment_details.xml
@@ -32,6 +32,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_below="@+id/display" />
 
         <TextView
@@ -39,6 +41,9 @@
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
             android:layout_below="@+id/txtId" />
 
         <TextView
@@ -46,6 +51,9 @@
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
             android:layout_below="@+id/txtAmount" />
         <TextView
             android:id="@+id/starStatus"
@@ -53,12 +61,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="starStatus"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_below="@+id/txtStatus" />
         <TextView
             android:id="@+id/rewardStatus"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
             android:text="rewardStatus"
             android:layout_below="@+id/starStatus" />
         <Button
