--- a/app/src/main/res/layout/content_spotify.xml
+++ b/app/src/main/res/layout/content_spotify.xml
@@ -78,9 +78,9 @@
                     android:id="@+id/playlist_intrinsic"
                     android:layout_width="300dp"
                     android:layout_height="300dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignTop="@+id/horizontalScrollView"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="10dp"
                     android:src="@drawable/playlist_intrinsic" />
 
                 <Button
